# MIPT_PRACTICE_9SEM

./: README.md
matrix/: CMakeLists.txt
matrix/src/applications/demo/: CMakeLists.txt  main.cpp
matrix/src/applications/tests/: CMakeLists.txt  Test_Matrix.cpp  main.cpp
matrix/src/applications/tests/python/: lu_and_det.py  matmul.py  transpose.py
matrix/src/include/: Matrix.h
trees/: CMakeLists.txt
trees/src/applications/demo/: CMakeLists.txt  main.cpp
trees/src/applications/tests/: CMakeLists.txt  Test_Set.cpp  Test_Trees.cpp  main.cpp
trees/src/libs/treeslib/: CMakeLists.txt
trees/src/libs/treeslib/trees/: Set.h  Tree.h
triangles/: CMakeLists.txt
triangles/src/applications/demo/: CMakeLists.txt  main.cpp
triangles/src/applications/tests/: CMakeLists.txt  Test_Edge.cpp  Test_Intersection.cpp  Test_Point.cpp  Test_Triangle.cpp  Test_TrinalglesIntersection.cpp  Test_Vector.cpp
triangles/src/libs/triangleslib/: CMakeLists.txt
triangles/src/libs/triangleslib/triangles/: Edge.cpp  Edge.h  Lib.cpp  Lib.h  Plane.cpp  Plane.h  Triangle.cpp  Triangle.h  Triangles.cpp  Triangles.h  Vector.cpp  Vector.h
